fix(Handler, Jwt): Fix some code erros